--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-    <meta  name="viewport"  content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1"/>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1"
+    />
     <title>PORTFOLIO</title>
 
     <!--CSS-->
@@ -29,21 +32,21 @@
   <body>
     <header>
       <div class="menu_bar"><i class="fa-solid fa-bars"></i></div>
-<!--
+
       <div class="modal en01">
         <ul class="gnb">
-        <li><a href="#intro">INTRO</a></li>
-        <li><a href="#about">ABOUT ME</a></li>
-        <li><a href="#project">PROJECT</a></li>
-        <li><a href="#draft">DRAFT</a></li>
-        <li><a href="#design">DESIGN</a></li>
-        <li><a href="#contact">CONTACT</a></li>
-      </ul>
+          <li><a href="#intro">INTRO</a></li>
+          <li><a href="#about">ABOUT ME</a></li>
+          <li><a href="#project">PROJECT</a></li>
+          <li><a href="#draft">DRAFT</a></li>
+          <li><a href="#design">DESIGN</a></li>
+          <li><a href="#contact">CONTACT</a></li>
+        </ul>
 
-      <div class="close"><i class="fa-solid fa-xmark"></i></div>
+        <div class="close"><i class="fa-solid fa-xmark"></i></div>
       </div>
     </header>
-
+    <!--
         <div id="container">
           <section class="intro" id="intro">
       <div class="intro_inner">
