--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
 
   <body>
-    <header>
+    <!-- <header>
       <div class="menu_bar"><i class="fa-solid fa-bars"></i></div>
 
       <div class="modal en01">
@@ -45,7 +45,7 @@
 
         <div class="close"><i class="fa-solid fa-xmark"></i></div>
       </div>
-    </header>
+    </header> -->
    
         <div id="container">
           <section class="intro" id="intro">
@@ -243,7 +243,7 @@
           </div>
         </section>
  
-        <section class="project spc" id="project">
+        <!-- <section class="project spc" id="project">
           <div class="inner">
             <ul class="circles">
               <li class="left_circle"></li>
@@ -418,7 +418,7 @@
             <img src="img/seoulmate.png" alt="team_project_기획서" />
             <div class="close"><i class="fa-solid fa-xmark"></i></div>
           </div>
-        </section>
+        </section> -->
 
         <section class="design" id="design">
           <div class="inner">
@@ -545,7 +545,7 @@
           </div>
         </section>
 
-        <section class="contact" id="contact">
+        <!-- <section class="contact" id="contact">
           <div class="inner">
             <div class="right_circle"></div>
 
@@ -583,7 +583,7 @@
             </ul>
             </div>
           </div>
-        </section>
+        </section> -->
       </div>
     </div>
   </body>
