--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           </div>
         </section>
  
-        <!-- <section class="project spc" id="project">
+         <section class="project spc" id="project">
           <div class="inner">
             <ul class="circles">
               <li class="left_circle"></li>
@@ -302,7 +302,7 @@
             </div>
           </div>
         </section>
-
+<!--
         <section class="project story">
           <div class="inner">
             <div class="cloneWrap">
