--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             </div>
           </div>
         </section>
-<!--
+
         <section class="project seoul">
           <div class="inner">
             <div class="cloneWrap">
@@ -418,8 +418,8 @@
             <img src="img/seoulmate.png" alt="team_project_기획서" />
             <div class="close"><i class="fa-solid fa-xmark"></i></div>
           </div>
-        </section> -->
-
+        </section>
+<!--
         <section class="design" id="design">
           <div class="inner">
             <div class="right_circle"></div>
@@ -545,7 +545,7 @@
           </div>
         </section>
 
-        <!-- <section class="contact" id="contact">
+         <section class="contact" id="contact">
           <div class="inner">
             <div class="right_circle"></div>
 
