--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
             </div>
           </div>
         </section>
-<!--
+
          <section class="contact" id="contact">
           <div class="inner">
             <div class="right_circle"></div>
@@ -583,7 +583,7 @@
             </ul>
             </div>
           </div>
-        </section> -->
+        </section>
       </div>
     </div>
   </body>
